# silicon-road

./: .gitignore  README.md  pyproject.toml
mcsr-tracker/: Package.swift
mcsr-tracker/Sources/MCSRTracker/: LoginItemManager.swift  MCSRTrackerApp.swift
mcsr-tracker/Sources/MCSRTracker/Models/: AssetCache.swift  SidecarStore.swift
mcsr-tracker/Sources/MCSRTracker/Views/: CurationPanelView.swift  DetailView.swift  MenuBarContent.swift  PreviewView.swift  SidebarView.swift  ThumbnailItemView.swift
mcsr-tracker/Sources/MCSRTrackerCore/: DomainTrust.swift  SidecarEntry.swift
mcsr-tracker/Tests/MCSRTrackerTests/: DomainTrustTests.swift  SidecarEntryTests.swift
src/silicon_road/: __init__.py  query.py  server.py
src/silicon_road/chase/: __init__.py  perplexity_agent.py  pipeline.py  validator.py
src/silicon_road/curate/: __init__.py  pipeline.py
src/silicon_road/embed/: __init__.py  perplexity.py
src/silicon_road/ingest/: __init__.py  pipeline.py  spreadsheet.py
src/silicon_road/store/: __init__.py  chroma.py
src/silicon_road/tools/: __init__.py
tests/: test_chroma_concurrency.py  test_query.py  test_spreadsheet.py
